--- a/app/views/smartrent/admin/floor_plans/index.html.erb
+++ b/app/views/smartrent/admin/floor_plans/index.html.erb
@@ -24,7 +24,7 @@
           <th>Rent min</th>
           <th>Rent max</th>
           <th>Penthouse</th>
-          <th>Actions</th>
+          <th width="160px">Actions</th>
         </tr>
 
         <% @admin_floor_plans.each do |admin_floor_plan| %>
