--- a/app/views/smartrent/admin/homes/index.html.erb
+++ b/app/views/smartrent/admin/homes/index.html.erb
@@ -16,7 +16,7 @@
           <th>Title</th>
           <th>Short Description</th>
           <th>Url</th>
-          <th>Actions</th>
+          <th width="160px">Actions</th>
         </tr>
         <% @homes.each do |home| %>
           <tr>
