--- a/app/views/smartrent/admin/residents/index.html.erb
+++ b/app/views/smartrent/admin/residents/index.html.erb
@@ -19,7 +19,7 @@
           <th>Unit ID</th>
           <th>residents</th>
           <th>Status</th>
-          <th>Actions</th>
+          <th width="160px">Actions</th>
         </tr>
 
         <% @residents.each do |resident| %>
