--- a/app/views/smartrent/admin/rewards/index.html.erb
+++ b/app/views/smartrent/admin/rewards/index.html.erb
@@ -19,7 +19,7 @@
           <th>Period Start</th>
           <th>Period End</th>
           <th>Type</th>
-          <th>Actions</th>
+          <th width="160px">Actions</th>
         </tr>
         <% @rewards.each do |reward| %>
           <tr>
