--- a/app/views/smartrent/admin/settings/_form.html.erb
+++ b/app/views/smartrent/admin/settings/_form.html.erb
@@ -1,23 +1,21 @@
 <%= form_for([:admin, @setting], html: {:class => "form-horizontal"}) do |f| %>
-  <% if @setting.errors.any? %>
-    <%= render "shared/form_errors", :locals => {:errors => @setting.errors} %>
-  <% end %>
+  <%= render "layouts/error_messages", :target => @setting %>
   <fieldset>
     <div class="form-group">
-      <%= f.label :key, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :key, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.text_field :key, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :value, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :value, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.text_field :value, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <label class="col-md-2 control-label" for="singlebutton"></label>
-      <div class="col-md-4">
+      <label class="col-md-4 control-label" for="singlebutton"></label>
+      <div class="col-md-7">
         <%= f.submit :class => "btn btn-primary" %>
       </div>
     </div>
