--- a/app/views/smartrent/admin/settings/index.html.erb
+++ b/app/views/smartrent/admin/settings/index.html.erb
@@ -14,7 +14,7 @@
         <tr>
           <th>Key</th>
           <th>Value</th>
-          <th>Actions</th>
+          <th width="160px">Actions</th>
         </tr>
         <% @settings.each do |setting| %>
           <tr>
