--- a/app/views/smartrent/residents/change_password.html.erb
+++ b/app/views/smartrent/residents/change_password.html.erb
@@ -12,8 +12,8 @@
 
       <div class="formInputs">
         <%= form_for(@resident, url: update_password_residents_path) do |f| %>
-          <%= render partial: "shared/form_errors", :locals => {:errors => @resident.errors} %>
-
+          <%= render "layouts/error_messages", :target => @resident %>
+          
           <div class="labelText">
             <%= f.label :current_password %>
           </div>
