--- a/app/views/smartrent/admin/features/import.html.erb
+++ b/app/views/smartrent/admin/features/import.html.erb
@@ -1,17 +1,28 @@
-<%= form_tag import_admin_features_path, :multipart => true, :class => "form-horizontal" do %>
-  <fieldset>
-    <legend>Import Features from a CSV file</legend>
-    <div class="form-group">
-      <%= label_tag :file, nil, class: "col-md-2 control-label" %>
-      <div class="col-md-4">
-        <%= file_field_tag :file, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="col-md-2 control-label" for="singlebutton"></label>
-      <div class="col-md-4">
-        <%= submit_tag "Import", :class => "btn btn-primary" %>
-      </div>
-    </div>
-  </fieldset>
+<% content_for(:ui_center) do %>
+  <div class="main">
+    <%= form_tag import_admin_features_path, :multipart => true, :class => "form-horizontal" do %>
+      <fieldset>
+        <legend>Import Features from a CSV file</legend>
+        <div class="form-group">
+          <%= label_tag :file, nil, class: "col-md-4 control-label" %>
+          <div class="col-md-7">
+            <%= file_field_tag :file %>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-md-4 control-label" for="singlebutton"></label>
+          <div class="col-md-7">
+            <%= submit_tag "Import", :class => "btn btn-primary" %>
+          </div>
+        </div>
+      </fieldset>
+    <% end %>
+  </div>
 <% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout(null, null, null, true);
+  });
+</script>
