--- a/app/views/smartrent/admin/floor_plan_images/_form.html.erb
+++ b/app/views/smartrent/admin/floor_plan_images/_form.html.erb
@@ -1,29 +1,27 @@
 <%= form_for([:admin, @floor_plan_image], html: {:class => "form-horizontal"}) do |f| %>
-  <% if @floor_plan_image.errors.any? %>
-    <%= render "shared/form_errors", :locals => {:errors => @floor_plan_image.errors} %>
-  <% end %>
+  <%= render "layouts/error_messages", :target => @floor_plan_image %>
   <fieldset>
     <div class="form-group">
-      <%= f.label :image, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
-        <%= f.file_field :image, :class => "form-control" %>
+      <%= f.label :image, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
+        <%= f.file_field :image %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :caption, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :caption, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.text_field :caption, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :more_home_id, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :more_home_id, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.collection_select :more_home_id, Smartrent::MoreHome.all, :id, :name, {:include_blank => "--Select Home--"}, {:class => "form-control"} %>
       </div>
     </div>
     <div class="form-group">
-      <label class="col-md-2 control-label" for="singlebutton"></label>
-      <div class="col-md-4">
+      <label class="col-md-4 control-label" for="singlebutton"></label>
+      <div class="col-md-7">
         <%= f.submit :class => "btn btn-primary" %>
       </div>
     </div>
