--- a/app/views/smartrent/admin/floor_plan_images/edit.html.erb
+++ b/app/views/smartrent/admin/floor_plan_images/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing floor_plan_image</h1>
+<% content_for(:ui_center) do %>
+  <div class="main">
+    <h3>Editing Floor Plan Image</h3>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', admin_floor_plan_image_path(@floor_plan_image) %> |
-<%= link_to 'Back', admin_floor_plan_images_path %>
+    <%= link_to 'Show', admin_floor_plan_image_path(@floor_plan_image) %> |
+    <%= link_to 'Back', admin_floor_plan_images_path %>
+  </div>
+<% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout(null, null, null, true);
+  });
+</script>
