--- a/app/views/smartrent/admin/floor_plans/_form.html.erb
+++ b/app/views/smartrent/admin/floor_plans/_form.html.erb
@@ -1,78 +1,76 @@
 <%= form_for([:admin, @admin_floor_plan], html: {:class => "form-horizontal"}) do |f| %>
-  <% if @admin_floor_plan.errors.any? %>
-    <%= render "shared/form_errors", :locals => {:errors => @admin_floor_plan.errors} %>
-  <% end %>
+  <%= render "layouts/error_messages", :target => @admin_floor_plan %>
   <fieldset>
 
     <div class="form-group">
-      <%= f.label :property_id, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :property_id, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.collection_select :property_id, Smartrent::Property.all, :id, :title, {:include_blank => "--Select Property"}, {:class => "form-control"} %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :origin_id, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :origin_id, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.number_field :origin_id, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :name, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :name, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.text_field :name, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :url, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :url, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.url_field :url, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :sq_feet_max, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :sq_feet_max, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.text_field :sq_feet_max, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :sq_feet_min, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :sq_feet_min, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.text_field :sq_feet_min, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :beds, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :beds, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.number_field :beds, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :baths, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :baths, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.number_field :baths, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :rent_min, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :rent_min, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.number_field :rent_min, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :rent_max, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
+      <%= f.label :rent_max, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
         <%= f.number_field :rent_max, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :penthouse, :class => "col-md-2 control-label" %>
-      <div class="col-md-4">
-        <%= f.check_box :penthouse, :class => "form-control" %>
+      <%= f.label :penthouse, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
+        <%= f.check_box :penthouse %>
       </div>
     </div>
     <div class="form-group">
-      <label class="col-md-2 control-label" for="singlebutton"></label>
-      <div class="col-md-4">
+      <label class="col-md-4 control-label" for="singlebutton"></label>
+      <div class="col-md-7">
         <%= f.submit :class => "btn btn-primary" %>
       </div>
     </div>
