--- a/app/views/smartrent/admin/floor_plans/edit.html.erb
+++ b/app/views/smartrent/admin/floor_plans/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Property Floor Plan</h1>
+<% content_for(:ui_center) do %>
+  <div class="main">
+    <h3>Editing Property Floor Plan</h3>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', admin_floor_plan_path(@admin_floor_plan) %> |
-<%= link_to 'Back', admin_floor_plans_path %>
+    <%= link_to 'Show', admin_floor_plan_path(@admin_floor_plan) %> |
+    <%= link_to 'Back', admin_floor_plans_path %>
+  </div>
+<% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout(null, null, null, true);
+  });
+</script>
