--- a/app/views/smartrent/admin/homes/new.html.erb
+++ b/app/views/smartrent/admin/homes/new.html.erb
@@ -1,3 +1,13 @@
-<h1>New Home</h1>
+<% content_for(:ui_center) do %>
+  <div class="main">
+    <h3>New Home</h3>
+    <%= render 'form' %>
+  </div>
+<% end %>
 
-<%= render 'form' %>
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout(null, null, null, true);
+  });
+</script>
