--- a/app/views/smartrent/admin/properties/index.html.erb
+++ b/app/views/smartrent/admin/properties/index.html.erb
@@ -16,7 +16,7 @@
           <th>Name</th>
           <th>Description</th>
           <th>Website</th>
-          <th>Actions</th>
+          <th width="160px">Actions</th>
         </tr>
       <% @properties.each do |property| %>
         <tr>
