--- a/app/views/smartrent/admin/resident_properties/edit.html.erb
+++ b/app/views/smartrent/admin/resident_properties/edit.html.erb
@@ -1,3 +1,14 @@
-<h1>Editing Resident Property</h1>
+<% content_for(:ui_center) do %>
+  <div class="main">
+    <h3>Editing Resident's Property</h3>
 
-<%= render 'form' %>
+    <%= render 'form' %>
+  </div>
+<% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout(null, null, null, true);
+  });
+</script>
