--- a/app/views/smartrent/admin/residents/rewards.html.erb
+++ b/app/views/smartrent/admin/residents/rewards.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing Resident Rewards</h1>
+<h3>Listing Resident Rewards</h3>
 <% if @rewards.present? %>
   <table class="table">
     <tr>
@@ -8,7 +8,7 @@
       <th>Period Start</th>
       <th>Period End</th>
       <th>Type</th>
-      <th>Actions</th>
+      <th width="160px">Actions</th>
     </tr>
 
     <% @rewards.each do |reward| %>
