--- a/app/views/smartrent/admin/rewards/new.html.erb
+++ b/app/views/smartrent/admin/rewards/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Reward</h1>
+<% content_for(:ui_center) do %>
+  <div class="main">
+    <h3>New Reward</h3>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', admin_rewards_path %>
+    <%= link_to 'Back', admin_rewards_path %>
+  </div>
+<% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout(null, null, null, true);
+  });
+</script>
