--- a/app/views/smartrent/admin/settings/show.html.erb
+++ b/app/views/smartrent/admin/settings/show.html.erb
@@ -1,15 +1,24 @@
-<p id="notice"><%= notice %></p>
+<% content_for(:ui_center) do %>
+  <div class="main">
+    <p>
+      <b>Key:</b>
+      <%= @setting.key %>
+    </p>
 
-<p>
-  <b>Key:</b>
-  <%= @setting.key %>
-</p>
-
-<p>
-  <b>Value:</b>
-  <%= @setting.value %>
-</p>
+    <p>
+      <b>Value:</b>
+      <%= @setting.value %>
+    </p>
 
 
-<%= link_to 'Edit', edit_admin_setting_path(@setting) %> |
-<%= link_to 'Back', admin_settings_path %>
+    <%= link_to 'Edit', edit_admin_setting_path(@setting) %> |
+    <%= link_to 'Back', admin_settings_path %>
+  </div>
+<% end %>
+
+
+<script type="text/javascript">
+  $(function(){
+    App.initPageLayout(null, null, null, true);
+  });
+</script>
